Added JavaDoc comments.